objects/LAT_EventPayment__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Ammount__c</fullName>
        <label>Valor</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_ApprovedPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pagamento aprovado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BonusPercent__c</fullName>
        <label>Bonificação (%)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BonusQuantity__c</fullName>
        <label>Bonificação (Qtde)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BonusQuantity_fx__c</fullName>
        <formula>LAT_VolumeGF__c * LAT_BonusPercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LAT BonusQuantity fx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_CNPJ_Fornecedor__c</fullName>
        <label>CNPJ Fornecedor (sem separadores)</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ContractEvent__c</fullName>
        <label>Eventos Contrato</label>
        <referenceTo>LAT_Contract_Eventos__c</referenceTo>
        <relationshipLabel>Pagamentos Evento</relationshipLabel>
        <relationshipName>Pagamentos_Evento</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pagamentos Evento</relationshipLabel>
        <relationshipName>Pagamentos_Evento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_EventCashValue__c</fullName>
        <label>Evento - Valor Cash (R$)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_EventPaymentCreatedAfterSigning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EventPaymentCreatedAfterSigning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_EventProductValue__c</fullName>
        <label>Evento - Valor Produto</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_EventType__c</fullName>
        <label>Tipo de Evento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P</fullName>
                </value>
                <value>
                    <fullName>NET SALES</fullName>
                </value>
                <value>
                    <fullName>ON INVOICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_EventValue__c</fullName>
        <label>Evento - Valor (R$)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_FY__c</fullName>
        <formula>IF( (MONTH(LAT_PaymentDate__c ) &gt;= 7 &amp;&amp; MONTH(LAT_PaymentDate__c ) &lt;= 12),

&quot;FY&quot; &amp; RIGHT ( TEXT (YEAR(LAT_PaymentDate__c)+ 1), 2) ,
&quot;FY&quot; &amp; RIGHT (TEXT (YEAR(LAT_PaymentDate__c)), 2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Finality__c</fullName>
        <label>Finalidade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Condição Comercial</fullName>
                </value>
                <value>
                    <fullName>On Invoice</fullName>
                </value>
                <value>
                    <fullName>Patrocínio</fullName>
                </value>
                <value>
                    <fullName>Condição Comercial Off Invoice</fullName>
                </value>
                <value>
                    <fullName>Condição Comercial On Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_GoalNotReached__c</fullName>
        <label>Meta Atingida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sim</fullName>
                </value>
                <value>
                    <fullName>Não</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_IntegrationMessage__c</fullName>
        <label>Mensagem Integração</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LAT_IntegrationStatus__c</fullName>
        <label>Status Integração</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Novo</fullName>
                </value>
                <value>
                    <fullName>Não Integrado</fullName>
                </value>
                <value>
                    <fullName>Em Processo Integração</fullName>
                </value>
                <value>
                    <fullName>Pendente Integração</fullName>
                </value>
                <value>
                    <fullName>Integrado com Sucesso</fullName>
                </value>
                <value>
                    <fullName>Erro Integração</fullName>
                </value>
                <value>
                    <fullName>SKU não cadastrado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_IsCommCondParentPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Commercial Condition Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pagamentos_Evento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ParentPayment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Pagamento Evento</label>
        <referenceTo>LAT_EventPayment__c</referenceTo>
        <relationshipLabel>Pagamentos Evento</relationshipLabel>
        <relationshipName>Pagamentos_Evento</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentDateDone__c</fullName>
        <label>Data de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentDateOriginal__c</fullName>
        <label>Data Prevista Pagamento (original)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentDate__c</fullName>
        <label>Data prevista de pagamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_PaymentGoals__c</fullName>
        <description>Used to save the html to send on the approval process email.</description>
        <label>Meta</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LAT_Producer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Produtor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agrupamento Produtos</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Pagamento Produto</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Pagamentos Evento</relationshipLabel>
        <relationshipName>LAT_EventPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_ProductValue__c</fullName>
        <label>Valor Produto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_ReleaseReason__c</fullName>
        <label>Motivo Liberação</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Send_to_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_SkuAtIntegration__c</fullName>
        <label>SKU Referência</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                    <label>Cancelado</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Efetivo</label>
                </value>
                <value>
                    <fullName>Em Aprovação</fullName>
                </value>
                <value>
                    <fullName>Erro Integração</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Integrado</label>
                </value>
                <value>
                    <fullName>P</fullName>
                    <label>Pendente</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Reprovado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_TotalProductValue__c</fullName>
        <formula>LAT_ProductValue__c * LAT_Volumen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Produto Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_UOM__c</fullName>
        <formula>if( ISPICKVAL(LAT_Finality__c, &apos;Condição Comercial&apos;),&apos;GF&apos;,&apos;CA&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unidade de Medida</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_VolumeGF__c</fullName>
        <label>Volume (GF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Volumen__c</fullName>
        <label>Volume (CA\BT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pagamento Evento</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Nome de Pagamento Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pagamentos Evento</pluralLabel>
    <recordTypes>
        <fullName>LAT_PagamentoDinheiro</fullName>
        <active>true</active>
        <label>Pagamento Dinheiro</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_PagamentoProduto</fullName>
        <active>true</active>
        <label>Pagamento Produto</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_PaymentGroup</fullName>
        <active>true</active>
        <description>Grouping of payments to approve payments in the external service</description>
        <label>Payment Group</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>